--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://green:isdepartment@cluster0.lenor.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
+NODE_ENV=production
